# server/middleware/auth.js
@@ -1,53 +1,69 @@
-const { findByToken, tokenTime, userLogout } = require('../models/User')
-const moment = require("moment");
+const jwt = require('jsonwebtoken');
+const pool = require('../config/pool');
 
 
-let auth = (req, res, next) => {
-    let token = req.cookies.w_auth;
-    //로그아웃할때 만료time 
-    findByToken(token, (err, user)=> {
+const auth = async(req, res, next) => {
+    
+    const token = req.cookies.accessToken;
 
-        if (err) throw console.log("에러",err);
 
-        if (user.length === 0){
-            return res.json({
-                isAuth: false,
-                error: true
-            });
-        } 
+    try {
+
+        if (!token){
+            return res.json({ isAuth: false, error: true });
+        }
         
-        tokenTime(user[0], (err, time)=> {
-
-            if (err) return res.json({ success: false, err });
-
-            const currentTime = moment().valueOf();
-
-            if (currentTime > time){
-
-                userLogout(user[0].id, (err) =>{
-                    
-                    if (err) return res.json({ success: false, err });
-                   
-                    return res.json({ isAuth: false, exp: true });
-
-                });
-            } else {
-                req.token = token;
-                req.user = user[0];
-              
-                next();
-            }
-
-        });
+        const decode = await jwt.verify(token,'secret');
         
+        const userInfo = await findUserInfo(decode.data);
 
-        // req.token = token;
-        // req.user = user[0];
-      
-        // next();
+        req.token = token;
+        req.user = userInfo[0]
+        next();
 
-    });
+
+    } catch(err) {
+        console.log("auth 에러", err);
+
+        if (err.name === 'TokenExpiredError') {
+            console.log("토큰time 만료");
+
+            return res.json({ isAuth: true, exp: true });
+        }
+
+    }
+    
 
 };
 
+
+const findUserInfo = async id => {
+
+    const conn = await pool.getConnection();
+    
+    try {
+        await conn.beginTransaction();
+
+        const [result] = await conn.query("SELECT * FROM User WHERE id=?",[id]);
+
+        await conn.commit();
+
+        conn.release();
+
+        return result;
+    
+    } catch (err) {
+
+        console.log("에러",err);
+
+        conn.rollback();
+
+        conn.release();
+    }
+
+}
+
+
 module.exports = { auth };
+
+
